esto es un segundo comment

--- a/servicios.html
+++ b/servicios.html
@@ -20,9 +20,49 @@
 </header>
 <body class="fondo">
     <h1>Servicios</h1>
+
+      <div style="text-align: justify;">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus veritatis laboriosam quibusdam ipsum sed neque commodi voluptatem optio voluptate, fuga quidem recusandae officia necessitatibus asperiores pariatur repellendus aliquid provident odio.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates incidunt autem asperiores dolore natus qui vero ex laudantium. Quis necessitatibus accusamus qui dolores itaque. Corrupti laborum deserunt quis et assumenda!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima iure repellat eius excepturi ratione odio nostrum libero dignissimos rerum natus, eligendi nesciunt maiores mollitia, numquam consequatur itaque officiis sequi. Itaque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas debitis voluptas deleniti nesciunt, magni, at, nostrum mollitia hic doloremque nihil cum dolorem qui magnam ducimus illo porro eum omnis. Deserunt.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus veritatis laboriosam quibusdam ipsum sed neque commodi voluptatem optio voluptate, fuga quidem recusandae officia necessitatibus asperiores pariatur repellendus aliquid provident odio.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates incidunt autem asperiores dolore natus qui vero ex laudantium. Quis necessitatibus accusamus qui dolores itaque. Corrupti laborum deserunt quis et assumenda!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima iure repellat eius excepturi ratione odio nostrum libero dignissimos rerum natus, eligendi nesciunt maiores mollitia, numquam consequatur itaque officiis sequi. Itaque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas debitis voluptas deleniti nesciunt, magni, at, nostrum mollitia hic doloremque nihil cum dolorem qui magnam ducimus illo porro eum omnis. Deserunt.</p>
+      </div>
+
+
+  
+      <section>
+        <h2>
+          <strong>Imágenes</strong>
+        </h2>
+        <scroll-container>
+          <img class="box" src="/assets/img/imlist-img-003.jpg" alt="">
+          <img class="box" src="/assets/img/imlist-img-005.jpg" alt="">
+          <img class="box" src="/assets/img/imlist-img-002.jpg" alt="">
+          <img class="box" src="/assets/img/imlist-img-001.jpg" alt="">
+          <img class="box" src="/assets/img/imlist-img-010.jpg" alt="">
+          <img class="box" src="/assets/img/imlist-img-007.jpg" alt="">
+          <img class="box" src="/assets/img/imlist-img-009.jpg" alt="">
+          <img class="box" src="/assets/img/imlist-img-008.jpg" alt="">
+          <img class="box" src="/assets/img/imlist-img-006.jpg" alt="">
+          <img class="box" src="/assets/img/imlist-img-004.jpg" alt="">
+        </scroll-container>
+        <div>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus veritatis laboriosam quibusdam ipsum sed neque commodi voluptatem optio voluptate, fuga quidem recusandae officia necessitatibus asperiores pariatur repellendus aliquid provident odio.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates incidunt autem asperiores dolore natus qui vero ex laudantium. Quis necessitatibus accusamus qui dolores itaque. Corrupti laborum deserunt quis et assumenda!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima iure repellat eius excepturi ratione odio nostrum libero dignissimos rerum natus, eligendi nesciunt maiores mollitia, numquam consequatur itaque officiis sequi. Itaque.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas debitis voluptas deleniti nesciunt, magni, at, nostrum mollitia hic doloremque nihil cum dolorem qui magnam ducimus illo porro eum omnis. Deserunt.</p>
+        </div>
+      </section>
     
+  
     
 </body>
+<br>
+<br>
 <footer style="text-align: center; position: relative;">
     <strong>© 2023 Mi empresa - Todos los derechos reservados</strong>
 </footer>
