--- a/servicios.html
+++ b/servicios.html
@@ -49,7 +49,7 @@
           <img class="box" src="/assets/img/imlist-img-008.jpg" alt="">
           <img class="box" src="/assets/img/imlist-img-006.jpg" alt="">
           <img class="box" src="/assets/img/imlist-img-004.jpg" alt="">
-        </scroll-container>
+        </scroll-clontainer>
         <div>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus veritatis laboriosam quibusdam ipsum sed neque commodi voluptatem optio voluptate, fuga quidem recusandae officia necessitatibus asperiores pariatur repellendus aliquid provident odio.</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates incidunt autem asperiores dolore natus qui vero ex laudantium. Quis necessitatibus accusamus qui dolores itaque. Corrupti laborum deserunt quis et assumenda!</p>
