Se modificaron html y css como fondo y demas acorde a las modificaciones de lucas

--- a/index.html
+++ b/index.html
@@ -7,52 +7,25 @@
     <title>💻 TPO-WEB 🖥️</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-    <header>
-        <nav>
-            <ul>
-                <li><a class="active" href="index.html"><img src="./assets/img/comienzo.png" title="Inicio"height="50px" width="50px"></a></li>
-                <li style="background-color: chocolate;"><a href="institucional.html"><img src="./assets/img/manual.png" title="Institucional"height="50px" width="50px"></a></li>
-                <li style="background-color: darkgreen;"><a href="servicios.html"><img src="./assets/img/apoyo-tecnico.png" title="Servicios"height="50px" width="50px"></a></li>
-                <li style="float:right; background-color: red;"><a href="autogestion.html"><img src="./assets/img/charlar.png" title="Autogestión"height="50px" width="50px"></a></li>
-            </ul>
-        </nav>
-    </header>
-    <body class="fondo">
-        <!--Titulo-->
-        <h1>    BIENVENIDO A MI EMPRESA </h1>
-        <br>
-        <!-- <section class="fondo"> -->
-            <div class="container parrafos">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero provident nostrum harum eius maiores sequi neque soluta quia repudiandae odit deleniti, sint aut nemo, minus laboriosam voluptas. Obcaecati, fugit optio.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium placeat ullam ipsa explicabo aperiam maxime unde vitae, dolor temporibus molestias maiores culpa aliquid quos animi, sunt velit natus laboriosam!</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi iste praesentium quam voluptate eaque quis rem veritatis accusantium repellat. Commodi eaque laborum provident! Blanditiis libero nulla asperiores suscipit accusantium quidem.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, porro quidem exercitationem reiciendis commodi in aut beatae nihil culpa corrupti quibusdam dignissimos voluptatum officia ea odio, sequi quo repellat ipsum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nihil asperiores soluta, impedit, delectus eaque tenetur optio sint, unde eius blanditiis quia? Exercitationem aliquam, mollitia non voluptatem cum asperiores sit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laborum dicta quis eum harum nostrum incidunt explicabo repellat quidem vitae magni facere ea fuga, enim illo tenetur autem minima. Mollitia!</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum, architecto necessitatibus. Nobis modi recusandae, ipsam totam facilis numquam. Deserunt distinctio repudiandae vero voluptates cum, vitae debitis consequuntur praesentium explicabo recusandae.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus qui illum velit doloremque voluptatem voluptas laborum corrupti perferendis, aliquam labore eius nihil quis maxime aspernatur ratione quo dolores totam omnis.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero provident nostrum harum eius maiores sequi neque soluta quia repudiandae odit deleniti, sint aut nemo, minus laboriosam voluptas. Obcaecati, fugit optio.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium placeat ullam ipsa explicabo aperiam maxime unde vitae, dolor temporibus molestias maiores culpa aliquid quos animi, sunt velit natus laboriosam!</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi iste praesentium quam voluptate eaque quis rem veritatis accusantium repellat. Commodi eaque laborum provident! Blanditiis libero nulla asperiores suscipit accusantium quidem.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, porro quidem exercitationem reiciendis commodi in aut beatae nihil culpa corrupti quibusdam dignissimos voluptatum officia ea odio, sequi quo repellat ipsum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nihil asperiores soluta, impedit, delectus eaque tenetur optio sint, unde eius blanditiis quia? Exercitationem aliquam, mollitia non voluptatem cum asperiores sit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laborum dicta quis eum harum nostrum incidunt explicabo repellat quidem vitae magni facere ea fuga, enim illo tenetur autem minima. Mollitia!</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum, architecto necessitatibus. Nobis modi recusandae, ipsam totam facilis numquam. Deserunt distinctio repudiandae vero voluptates cum, vitae debitis consequuntur praesentium explicabo recusandae.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus qui illum velit doloremque voluptatem voluptas laborum corrupti perferendis, aliquam labore eius nihil quis maxime aspernatur ratione quo dolores totam omnis.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero provident nostrum harum eius maiores sequi neque soluta quia repudiandae odit deleniti, sint aut nemo, minus laboriosam voluptas. Obcaecati, fugit optio.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium placeat ullam ipsa explicabo aperiam maxime unde vitae, dolor temporibus molestias maiores culpa aliquid quos animi, sunt velit natus laboriosam!</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi iste praesentium quam voluptate eaque quis rem veritatis accusantium repellat. Commodi eaque laborum provident! Blanditiis libero nulla asperiores suscipit accusantium quidem.</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, porro quidem exercitationem reiciendis commodi in aut beatae nihil culpa corrupti quibusdam dignissimos voluptatum officia ea odio, sequi quo repellat ipsum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nihil asperiores soluta, impedit, delectus eaque tenetur optio sint, unde eius blanditiis quia? Exercitationem aliquam, mollitia non voluptatem cum asperiores sit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae laborum dicta quis eum harum nostrum incidunt explicabo repellat quidem vitae magni facere ea fuga, enim illo tenetur autem minima. Mollitia!</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum, architecto necessitatibus. Nobis modi recusandae, ipsam totam facilis numquam. Deserunt distinctio repudiandae vero voluptates cum, vitae debitis consequuntur praesentium explicabo recusandae.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus qui illum velit doloremque voluptatem voluptas laborum corrupti perferendis, aliquam labore eius nihil quis maxime aspernatur ratione quo dolores totam omnis.</p>    
-            </div>
-        <!-- </section> -->
-        
-    </body>
+<header>
+    <!-- Menú de navegación -->
+    <nav>
+        <ul id="menu_navegacion">
+            <li><a class="active" href="index.html"><img src="./assets/img/comienzo.png" title="Inicio"height="50px" width="50px"></a></li>
+            <li><a href="institucional.html"><img src="./assets/img/manual.png" title="Institucional"height="50px" width="50px"></a></li>
+            <li><a href="servicios.html"><img src="./assets/img/apoyo-tecnico.png" title="Servicios"height="50px" width="50px"></a></li>
+            <li><a href="autogestion.html"><img src="./assets/img/charlar.png" title="Autogestión"height="50px" width="50px"></a></li>
+        </ul>
+    </nav>
+</header>
+<body class="content">
+    <!--Titulo-->
+    <h1>    BIENVENIDO A MI EMPRESA </h1>
+    <!-- Contenido principal -->
     
-    <footer style="text-align: center; position: relative; height: max-content;">
-        <strong>© 2023 Mi empresa - Todos los derechos reservados</strong>
-    </footer>
+</body>
+
+<footer>
+    <strong>© 2023 Mi empresa - Todos los derechos reservados</strong>
+</footer>
 </html>
