--- a/institucional.html
+++ b/institucional.html
@@ -8,19 +8,20 @@
     <title>💻 TPO-WEB 🖥️</title>
 </head>
 <header>
+    <!-- Menú de navegación -->
     <nav>
-        <ul>
-            <li><a class="active" href="index.html"><img src="./assets/img/comienzo.png" title="Inicio"height="50px" width="50px"></a></li>
-            <li style="background-color: chocolate;"><a href="institucional.html"><img src="./assets/img/manual.png" title="Institucional"height="50px" width="50px"></a></li>
-            <li style="background-color: darkgreen;"><a href="servicios.html"><img src="./assets/img/apoyo-tecnico.png" title="Servicios"height="50px" width="50px"></a></li>
-            <li style="float:right; background-color: red;"><a href="autogestion.html"><img src="./assets/img/charlar.png" title="Autogestión"height="50px" width="50px"></a></li>
+        <ul id="menu_navegacion">
+            <li><a class="active"></a><img src="./assets/img/comienzo.png" title="Inicio"height="50px" width="50px"></a></li>
+            <li><a href="institucional.html"><img src="./assets/img/manual.png" title="Institucional"height="50px" width="50px"></a></li>
+            <li><a href="servicios.html"><img src="./assets/img/apoyo-tecnico.png" title="Servicios"height="50px" width="50px"></a></li>
+            <li><a href="autogestion.html"><img src="./assets/img/charlar.png" title="Autogestión"height="50px" width="50px"></a></li>
         </ul>
     </nav>
 </header>
-<body class="fondo">
+<body class="content">
     <h1>Institucional</h1>
 </body>
-<footer style="text-align: center; position: relative; ">
+<footer>
     <strong>© 2023 Mi empresa - Todos los derechos reservados</strong>
 </footer>
 </html>
