--- a/servicios.html
+++ b/servicios.html
@@ -9,16 +9,18 @@
    
 </head>
 <header>
+<!-- Menú de navegación -->
     <nav>
-        <ul>
+        <ul id="menu_navegacion">
             <li><a class="active" href="index.html"><img src="./assets/img/comienzo.png" title="Inicio"height="50px" width="50px"></a></li>
-            <li style="background-color: chocolate;"><a href="institucional.html"><img src="./assets/img/manual.png" title="Institucional"height="50px" width="50px"></a></li>
-            <li style="background-color: darkgreen;"><a href="servicios.html"><img src="./assets/img/apoyo-tecnico.png" title="Servicios"height="50px" width="50px"></a></li>
-            <li style="float:right; background-color: red;"><a href="autogestion.html"><img src="./assets/img/charlar.png" title="Autogestión"height="50px" width="50px"></a></li>
+            <li></li><a href="institucional.html"><img src="./assets/img/manual.png" title="Institucional"height="50px" width="50px"></a></li>
+            <li><a href="servicios.html"><img src="./assets/img/apoyo-tecnico.png" title="Servicios"height="50px" width="50px"></a></li>
+            <li><a href="autogestion.html"><img src="./assets/img/charlar.png" title="Autogestión"height="50px" width="50px"></a></li>
         </ul>
     </nav>
 </header>
-<body class="fondo">
+<body class="content">
+  <!-- Contenido principal -->
     <h1>Servicios</h1>
 
       <div style="text-align: justify;">
@@ -63,7 +65,8 @@
 </body>
 <br>
 <br>
-<footer style="text-align: center; position: relative;">
+<!-- Footer -->
+<footer>
     <strong>© 2023 Mi empresa - Todos los derechos reservados</strong>
 </footer>
 </html>
