Modificaciones menores varias, cambio nitidez imagenes de Servicos y arreglos

--- a/institucional.html
+++ b/institucional.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/institucional.css">
-    <title>💻 TPO-WEB 🖥️</title>
+    <title>💻 Servicios de Internet 🖥️</title>
 </head>
 <header>
     <!-- Menú de navegación -->
     <nav>
         <ul id="menu_navegacion">
-            <li><a class="active"></a><img src="./assets/img/comienzo.png" title="Inicio"height="50px" width="50px"></a></li>
+            <li><a class="active" href="index.html"><img src="./assets/img/comienzo.png" title="Inicio"height="50px" width="50px"></a></li>
             <li><a href="institucional.html"><img src="./assets/img/manual.png" title="Institucional"height="50px" width="50px"></a></li>
             <li><a href="servicios.html"><img src="./assets/img/apoyo-tecnico.png" title="Servicios"height="50px" width="50px"></a></li>
             <li><a href="autogestion.html"><img src="./assets/img/charlar.png" title="Autogestión"height="50px" width="50px"></a></li>
