--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>💻 TPO-WEB 🖥️</title>
+    <title>💻 Servicios de Internet 🖥️</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <header>
