Se realizaron cambios con GRID

--- a/index.html
+++ b/index.html
@@ -22,6 +22,49 @@
     <!--Titulo-->
     <h1>    BIENVENIDO A MI EMPRESA </h1>
     <!-- Contenido principal -->
+    <div class="contenedor">
+        <div class="cont-images">
+
+            <div class="card" style="background-image: url(assets/img/img-ind-001.jpg);">
+                <div class="textos">
+                    <h3>Internet</h3>
+                    <p>Fibra Optical</p>
+                </div>
+            </div>
+            <div class="card" style="background-image: url(assets/img/img-ind-002.jpg);">
+                <div class="textos">
+                    <h3>Telefonía</h3>
+                    <p>Telefonía VOIP</p>
+                </div>
+            </div>
+            <div class="card" style="background-image: url(assets/img/img-ind-003.jpg);">
+                <div class="textos">
+                    <h3>Televisión</h3>
+                    <p>Televisión por IP</p>
+                </div>
+            </div>
+            <div class="card" style="background-image: url(assets/img/img-ind-004.jpg);">
+                <div class="textos">
+                    <h3>Live Stream</h3>
+                    <p>Servicio de streaming</p>
+                </div>
+            </div>
+            <div class="card" style="background-image: url(assets/img/img-ind-005.jpg);">
+                <div class="textos">
+                    <h3>Servcios CINE</h3>
+                    <p>Disfruta el mejor cine</p>
+                </div>
+            </div>
+            <div class="card" style="background-image: url(assets/img/img-ind-006.jpg);">
+                <div class="textos">
+                    <h3>Servicios Web</h3>
+                    <p>Front-End y Back-End</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    
     
 </body>
 
