Modificaciones style.css y limpeza html y css

--- a/pages/autogestion.html
+++ b/pages/autogestion.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <!--<link rel="stylesheet" href="styles/style.css">-->
     <link rel="stylesheet" href="/styles/autogestion.css">
-    <script src="/assets/scripts/script.js"></script>
     <title>💻 Servicios de Internet 🖥️</title>
 </head>
 <header>
@@ -20,18 +18,20 @@
         </ul>
     </nav>
 </header>
+
+<!-- Contenido principal -->
 <body class="content">
-    <!-- Contenido principal -->
-        <h1>Autogestion</h1>
-            <p>Tenes dudas, consultas sobre nuestros paquetes o como funciona nuestra politica de soporte, completa el siguiente formulario y te contactaremos a la brevedad.</p>
+    <h1>Autogestion</h1>
+    
+        <p>Tenes dudas, consultas sobre nuestros paquetes o como funciona nuestra politica de soporte, completa el siguiente formulario y te contactaremos a la brevedad.</p>
         <br>
         <br>
-        <form id= "formula">
+        <form id="formula">
             <ul class="formulario">
             <div class="casilla">
                 <li>
                     <label for="name">Nombre: 
-                    <input type="text"  name="name" placeholder="nombre"/>
+                    <input type="text"  name="name" placeholder="Nombre">
                 </label>
                 </li>
             </div>
@@ -47,7 +47,7 @@
             <div class="casilla">
                 <li>
                     <label for="msg">Mensaje:
-                    <textarea id="text" name="msg" rows="5" cols="55" placeholder="mensaje">
+                    <textarea id="text" name="msg" rows="5" cols="55" placeholder="Mensaje">
                     </textarea>
                 </label>
                 </li>
@@ -60,9 +60,13 @@
                 </li>
             </ul>
         </form>
+</body>
+
 <!-- Footer -->
     <footer>
         <strong>© 2023 Mi empresa - Todos los derechos reservados</strong>
     </footer>
-    </body>
+
+<!-- Script -->
+<script src="/assets/scripts/script.js"></script>
 </html>
