Nuevo style al formulario

--- a/assets/pages/autogestion.html
+++ b/assets/pages/autogestion.html
@@ -23,17 +23,21 @@
 
     <!-- Contenido principal -->
 
-        <h1>Autogestion</h1>
+    <h1>Autogestion</h1>
+
+        <section>
 
             <p>Tenes dudas, consultas sobre nuestros paquetes o como funciona nuestra politica de soporte, completa el siguiente formulario y te contactaremos a la brevedad.</p>
             <br>
             <br>
+            
             <form id="formulario">
+                <img src="/assets/img/checklist.png">
                 <ul class="formulario">
                 <div class="casilla">
                     <li>
                         <label for="name">Nombre:
-                            <input type="text"  name="name" placeholder="Escribe aquí...">
+                            <input type="text"  name="name" size="55" placeholder="Escribe aquí...">
                         </label>
                     </li>
                 </div>
@@ -41,7 +45,7 @@
                 <div class="casilla">
                     <li>
                         <label for="mail">Correo electronico:</label>
-                            <input type="email" name="mail" placeholder="Escribe aquí...">
+                            <input type="email" name="mail" size="55" placeholder="Escribe aquí...">
                         </label> 
                     </li>
                 </div>
@@ -61,6 +65,7 @@
                     </li>
                 </ul>
             </form>
+        </section>
 
     <!-- Footer -->
         <footer>
