Display Grid en institucional.css + insercion imagen en institucional.html

--- a/assets/pages/institucional.html
+++ b/assets/pages/institucional.html
@@ -21,8 +21,12 @@
         </nav>
 
         <h1>Institucional</h1>
-
-        <div class="container">
+        <section class="container">
+       
+        <div>
+            <img src="/assets/img/corpo.png" class="corpo">
+        </div>
+        <div>
 
             <p>Nuestra empresa surge en los albores de la era digital, con el objetivo de proporcionar soluciones tecnológicas avanzadas y servicios de calidad en el campo de la conectividad. Desde nuestros humildes inicios, nos hemos enfocado en brindar servicios integrales que impulsen la transformación digital de nuestros clientes y les permitan aprovechar al máximo las oportunidades que ofrece internet.</p>
 
@@ -32,7 +36,7 @@
 
             <p>En resumen, somos una empresa dedicada a brindar servicios de tecnología asociados a internet, comprometidos con la excelencia, la innovación y la satisfacción del cliente. Estamos firmemente arraigados en nuestros valores de calidad, confiabilidad y servicio al cliente, y nos esforzamos por ser el socio tecnológico preferido para aquellos que desean aprovechar al máximo el potencial de la era digital.</p>
         </div>
-    
+        </section>
     <footer>
         <strong>© 2023 Mi empresa - Todos los derechos reservados</strong>
     </footer>
