Cambios fran finales

--- a/assets/pages/autogestion.html
+++ b/assets/pages/autogestion.html
@@ -8,9 +8,7 @@
     <title>💻 Servicios de Internet 🖥️</title>
 </head>
 <body class="content">
-    <header>
-    </header>
-
+    
     <!-- Menú de navegación -->
     <nav>
         <ul id="menu_navegacion">
@@ -20,10 +18,16 @@
             <li><a href="/assets/pages/autogestion.html"><img src="/assets/img/charlar.png" title="Autogestión"height="50px" width="50px"></a></li>
         </ul>
     </nav>
+    <header class="logo-container">
+        <img src="/assets/img/logo5.png" alt="logo_izquierda">
+        <!--Titulo-->
+        <h1>Autogestion</h1>
+        <img src="/assets/img/logo5.png" alt="logo_derecha">
 
+    </header>
     <!-- Contenido principal -->
 
-    <h1>Autogestion</h1>
+    
 
         <section>
 
