--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -9,8 +9,7 @@
    
 </head>
 <body class="content">
-  <header>
-  </header>
+  
     <!-- Menú de navegación -->
       <nav>
           <ul id="menu_navegacion">
@@ -20,11 +19,16 @@
               <li><a href="/assets/pages/autogestion.html"><img src="/assets/img/charlar.png" title="Autogestión"height="50px" width="50px"></a></li>
           </ul>
       </nav>
+    <header class="logo-container">
+        <img src="/assets/img/logo5.png" alt="logo_izquierda">
+        <!--Titulo-->
+        <h1>SERVICIOS</h1>
+        <img src="/assets/img/logo5.png" alt="logo_derecha">
+
+    </header>
 
     <!-- Contenido principal -->
     
-      <h1>Servicios</h1>
-
       <section id="internet">
         <h2>Internet</h2>
         <p>Ofrecemos servicios de internet de alta velocidad y confiabilidad. Nuestro enfoque está en proporcionar conectividad confiable para satisfacer las necesidades de nuestros clientes.</p>
